<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remote Medical Diagnosis</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <!--  Navigation Drawer -->
    <string name="menu_open">menu open</string>
    <string name="menu_close">menu close</string>
    <string name="nav_drawer_home">Home</string>
    <string name="nav_drawer_cam">Video Conference</string>
    <string name="nav_drawer_microscope">Microscope</string>
    <string name="nav_drawer_blood_pressure">Blood Pressure</string>
    <string name="nav_drawer_patient_info">Patient Info</string>
    <string name="nav_drawer_share_image">Share Image</string>
    <string name="nav_drawer_help">Help</string>
    <string name="nav_drawer_send_image">Send Image</string>
    
    <!--  Info Page -->
    <string name="info_name">Name:</string>
    <string name="info_patient_name">Enter Name</string>
    <string name="info_birthday">Birthday:</string>
    <string name="info_patient_birthday">Enter Birthday</string>
    <string name="info_send">Send</string>
    
   <!--  Help Menu --> 
  <string name="title_help">Help</string> 
  <string name="help_text">To start, select the navigation bar on the left and click on the Patient Info item. 
      Use each device by clicking the corresponding option in the navigation drawer.</string> 
  <string name="help_patient_text">Enter in the corresponding patient information. Click send to send it to the
       doctor, or save to save the information in our records.</string> 
  <string name="help_blood_pressure">Plug the phone into the blood pressure moniter, and wait for the numbers to 
      appear. You can then send the information.</string> 
  <string name="help_send_image">Plug the phone into whichever device you want the picture from. Wait for it to 
      appear on screen, and click send.</string> 
  <string name="help_video">Click the navigation bar and the video conference will appear.</string> 
  <string name="help_microscope">Plug the phone into the microscope and the view will appear. You can zoom in at 
      any time, and stream this over video conference</string> 
      
  <!-- Send Image -->
  <string name="image_title">Share an Image</string> 
  <string name="image_instructions">Upload your xray. Push send to 
      share image with the doctor and place in medical records.</string> 
  <string name="send_button_text">Send Image</string> 
  <string name="upload_button_text">Upload Image</string> 

</resources>
